projects/compiler/test/typechecker/binary/or_error.2.out
Error at %FILE_NAME%:1:4
Illegal operator
  |  12 || true
        ^
No operator '||' exists between types Int and Bool
